[package]
name = "argon-rbx"
authors = ["Dervex"]
description = "Full featured tool for Roblox development"
repository = "https://github.com/argon-rbx/argon"
documentation = "https://argon.wiki/docs"
homepage = "https://argon.wiki"
license = "Apache-2.0"
version = "2.0.16"
edition = "2021"
build = "build.rs"

[[bin]]
name = "argon"
path = "src/main.rs"

[lib]
name = "argon"
path = "src/lib.rs"

[features]
plugin = []

[dependencies]
rbx_xml = "0.13.3"
rbx_binary = "0.7.6"
rbx_dom_weak = "2.7.0"
rbx_reflection = "4.5.0"
rbx_reflection_database = "0.2.10"

config-derive = { version = "*", path = "crates/config-derive" }
json-formatter = { version = "*", path = "crates/json-formatter" }
profiling = { version = "*", path = "crates/profiling/profiling" }

serde = { version = "1.0.206", features = ["derive"] }
rmpv = { version = "1.3.0", features = ["with-serde"] }
clap = { version = "4.5.15", features = ["derive", "cargo"] }
reqwest = { version = "0.12.5", default-features = false, features = [
	"blocking",
	"rustls-tls",
	"json",
] }
self_update = { version = "0.39.0", default-features = false, features = [
	"compression-zip-deflate",
	"rustls",
] }

notify-debouncer-full = "0.3.1"
clap-verbosity-flag = "2.2.1"
crossbeam-channel = "0.5.13"
derive-from-one = "0.1.0"
roblox_install = "1.0.0"
panic-message = "0.3.0"
actix-msgpack = "0.1.1"
puffin_http = "0.16.0"
serde_json = "1.0.124"
env_logger = "0.11.5"
include_dir = "0.7.4"
directories = "5.0.1"
lazy_static = "1.5.0"
backtrace = "0.3.73"
documented = "0.5.0"
dialoguer = "0.11.0"
path-clean = "1.0.1"
rmp-serde = "1.3.0"
actix-web = "4.9.0"
multimap = "0.10.0"
optfield = "0.3.0"

json2lua = "0.1.2"
toml2lua = "0.1.0"
yaml2lua = "0.1.0"
globenv = "0.2.1"

puffin = "0.19.0"
colored = "2.0.4"
anyhow = "1.0.86"
chrono = "0.4.38"
notify = "6.1.1"
whoami = "1.4.1"
trash = "5.1.0"
ctrlc = "3.4.2"
toml = "0.8.15"
glob = "0.3.1"
open = "5.3.0"
log = "0.4.22"
csv = "1.3.0"

[target.'cfg(not(target_os = "linux"))'.dependencies]
keybd_event = "0.1.2"

[target.'cfg(target_os = "windows")'.dependencies]
winsafe = { version = "0.0.22", features = ["user"] }

[build-dependencies]
anyhow = "1.0.86"
self_update = { version = "0.39.0", default-features = false, features = [
	"rustls",
] }

[dev-dependencies]
approx = "0.5.1"

[patch.crates-io]
notify-debouncer-full = { path = "crates/notify-debouncer-full" }
self_update = { path = "crates/self_update" }
