[package]
name = "argon-rbx"
authors = ["Dervex"]
description = "Full featured tool for Roblox development"
repository = "https://github.com/argon-rbx/argon"
documentation = "https://argon.wiki/docs"
homepage = "https://argon.wiki"
license = "Apache-2.0"
version = "2.0.23"
edition = "2021"
build = "build.rs"

[[bin]]
name = "argon"
path = "src/main.rs"

[lib]
name = "argon"
path = "src/lib.rs"

[features]
plugin = []

[dependencies]
rbx_xml = "1.0.0"
rbx_binary = "1.0.0"
rbx_dom_weak = "3.0.0"
rbx_reflection = "5.0.0"
rbx_reflection_database = "1.0.0"

config-derive = { version = "*", path = "crates/config-derive" }
json-formatter = { version = "*", path = "crates/json-formatter" }
profiling = { version = "*", path = "crates/profiling/profiling" }

uuid = { version = "1.13.1", features = ["v4", "fast-rng"] }
serde = { version = "1.0.219", features = ["derive"] }
rmpv = { version = "1.3.0", features = ["with-serde"] }
clap = { version = "4.5.27", features = ["derive", "cargo"] }
reqwest = { version = "0.12.12", default-features = false, features = [
	"blocking",
	"rustls-tls",
	"json",
] }
self_update = { version = "0.39.0", default-features = false, features = [
	"compression-zip-deflate",
	"rustls",
] }

notify-debouncer-full = "0.3.1"
clap-verbosity-flag = "2.2.3"
crossbeam-channel = "0.5.14"
derive-from-one = "0.1.0"
roblox_install = "1.0.0"
panic-message = "0.3.0"
actix-msgpack = "0.1.4"
puffin_http = "0.16.0"
serde_json = "1.0.138"
env_logger = "0.11.6"
include_dir = "0.7.4"
directories = "5.0.1"
lazy_static = "1.5.0"
backtrace = "0.3.74"
documented = "0.9.1"
dialoguer = "0.11.0"
path-clean = "1.0.1"
rmp-serde = "1.3.0"
actix-web = "4.9.0"
multimap = "0.10.0"
optfield = "0.4.0"
markdown = "0.3.0"

json2lua = "0.1.2"
toml2lua = "0.1.0"
yaml2lua = "0.1.0"
globenv = "0.2.1"

puffin = "0.19.0"
colored = "2.2.0"
anyhow = "1.0.95"
chrono = "0.4.39"
notify = "6.1.1"
whoami = "1.5.2"
trash = "5.2.1"
ctrlc = "3.4.5"
toml = "0.8.15"
glob = "0.3.2"
open = "5.3.2"
log = "0.4.25"
csv = "1.3.1"

[target.'cfg(not(target_os = "linux"))'.dependencies]
keybd_event = "0.1.2"

[target.'cfg(target_os = "windows")'.dependencies]
winsafe = { version = "0.0.22", features = ["user"] }

[build-dependencies]
anyhow = "1.0.95"
self_update = { version = "0.39.0", default-features = false, features = [
	"rustls",
] }

[dev-dependencies]
approx = "0.5.1"

[patch.crates-io]
notify-debouncer-full = { path = "crates/notify-debouncer-full" }
self_update = { path = "crates/self_update" }
